fixed alignment in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,68 +5,95 @@ body {
     overflow-x: hidden; /* hides horizontal scroll bar */
 }
 
-header {
+.top-header {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    z-index: 2;
+}
+
+.top-header .center .button{
+    display: flex;
+    gap: 10px;
+    background: none;
+    border: none;
+    font: bold 12pt 'Roboto', sans-serif;
+    color: black;
+    text-wrap: nowrap;
+}
+
+.top-header .center {
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.top-header .center .button:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    text-shadow: 3px 3px 4px rgba(221, 221, 221, 0.5);
+    transition: text-shadow 0.2s, text-decoration, 0.2s;
+}
+
+.main-header {
     position: fixed; /* makes object not move when scrolling */
-    top: 0px; /* object is 0px from top of screen */
+    top: 50px; /* object is 0px from top of screen */
     left: 0px; /* object is 0px from left of screen */
     width: 100%;
     height: 100px;
     background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
     display: flex; /* allows easy alignment for items in a container */          
     align-items: center; /* align vertically */
+    z-index: 3;
 }
 
-header .fixed-logo {
+.main-header .center {
+    display: flex;
+    justify-content: center; /* align horizontally */
+    flex-grow: 1; /* since we already use flex to align we do this and spacing will work */
+    gap: 50px;
+}
+
+.main-header .center .logo {
     width: 160px;
     height: auto; /* adjusts height based off width */
     padding-left: 56.19px;
     padding-right: 56.19px;
-    margin-left: 5%;
 }
 
-header .fixed-center-buttons {
-    display: flex;
-    justify-content: center; /* align horizontally */
-    flex-grow: 1; /* since we already use flex to align we do this and spacing will work */
-}
-
-header .center {
-    /* spacing */
-    margin: 0 5px;
-    white-space: nowrap;
-
-    /* styling */
+.main-header .center .button-center {
     background: none;
     border: none;
     font: 20pt 'Open Sans', sans-serif;
     color: black;
+    white-space: nowrap;
 }
 
-header .center:hover {
+.main-header .center .button-center:hover {
     color: rgb(0, 123, 255);
     cursor: pointer;
     text-decoration: underline;
     text-shadow: 3px 3px 4px rgba(221, 221, 221, 0.5);
-    transition: color 0.2s, text-decoration 0.2s, text-shadow 0.2s;
+    transition: color 0.2s, text-decoration 0.2s, text-shadow 0.2s, ;
 }
 
-header .right {
-    /* spacing */
-    margin-right: auto;
-    white-space: nowrap;
-    margin-right: 5%; 
-
-    /* styling */
+.main-header .button-right {
     padding: 7px 40px;
     border-radius: 30px;
     border: 2px solid rgb(0, 123, 255);
     background-color: rgb(0, 123, 255);
     font: Bold 20pt 'Open Sans', sans-serif;
     color: white;
+    white-space: nowrap;
 }
 
-header .right:hover {
+.main-header .button-right:hover {
     cursor: pointer;
     background-color: white;
     color: rgb(0, 123, 255);
@@ -77,6 +104,7 @@ header .right:hover {
 .sections {
     height: 100px;
     width: 100%;
+    z-index: 1;
 }
 
 section {
